<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:onClick="goProfile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:onClick="goHistory"
            android:title="@string/history" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_dialog_close_light"
            android:onClick="onClickLogout"
            android:title="@string/logout" />




</menu>