<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/containerWidth"
        android:layout_height="@dimen/containerHeight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="117dp"
            android:layout_height="124dp"
            android:background="@drawable/logo"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:autofillHints=""
            android:backgroundTint="@android:color/background_light"
            android:ems="10"
            android:hint="username"
            android:inputType="textPersonName"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:autofillHints=""
            android:backgroundTint="@android:color/background_light"
            android:ems="10"
            android:hint="password"
            android:inputType="textPassword"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameText"
            app:layout_constraintVertical_bias="0.009" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordText" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:background="@color/blueC"
            android:onClick="goLogin"
            android:text="@string/signup"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintVertical_bias="0.312" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>